--- a/src/pages/home2/home2.scss
+++ b/src/pages/home2/home2.scss
@@ -1,8 +1,12 @@
 .back {
 	background-color:#233d4d !important;
 }
-ion-navbar{
-	font-family: League  !important;
+
+img{
+  width: auto;
+  margin: auto;
+  display: block;
+  border: 2px solid #fff;
 }
 
 .uno{
@@ -15,11 +19,4 @@ ion-navbar{
 .parrafo{
 	font-family: Libre3  !important;
 	color: #ffffff;
-}
-
-.fixed{
-	height: 80% !important;
-	background-color:#fcca46 !important;
-	
-
 }
