--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,6 +35,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
+  colority:    #fe7f2d,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
@@ -86,3 +87,4 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
